# ITKUltrasoundMixtureModel

./: .gitignore  CMakeLists.txt  itk-module.cmake
Data/: Normal_000.mhd  TEE.mhd  TTE.mhd  TTE.zraw  tissueGGamma-Normal_000.mhd  tissueGGamma-TEE.mhd  tissueGGamma-TTE.mhd  tissueGamma-Normal_000.mhd  tissueGamma-TEE.mhd  tissueGamma-TTE.mhd  tissueGaussian-Normal_000.mhd  tissueGaussian-TEE.mhd  tissueGaussian-TTE.mhd  tissueGaussian-TTE.zraw  tissueRayleigh-Normal_000.mhd  tissueRayleigh-TEE.mhd  tissueRayleigh-TTE.mhd
include/: itkExpectationMaximizationUSMixtureModelEstimator.h  itkExpectationMaximizationUSMixtureModelEstimator.hxx  itkGammaInitHelper.h  itkGammaInitHelper.hxx  itkGammaMembershipFunction.hxx  itkGammaMixtureModelComponent.h  itkGammaMixtureModelComponent.hxx  itkGaussianInitHelper.h  itkGaussianInitHelper.hxx  itkGaussianMembershipFunction.h  itkGaussianMembershipFunction.hxx  itkGaussianMixtureModelComponent.h  itkGaussianMixtureModelComponent.hxx  itkGeneralizedGammaExpectationMaximizationMixtureModelEstimator.h  itkGeneralizedGammaExpectationMaximizationMixtureModelEstimator.hxx  itkGeneralizedGammaInitHelper.h  itkGeneralizedGammaInitHelper.hxx  itkGeneralizedGammaMixtureModelComponent.h  itkGeneralizedGammaMixtureModelComponent.hxx  itkLikelihoodMapImageFilter.h  itkLikelihoodMapImageFilter.hxx  itkMixtureModelInitHelper.hxx  itkRayleighInitHelper.h  itkRayleighInitHelper.hxx  itkRayleighMixtureModelComponent.h  itkRayleighMixtureModelComponent.hxx  itkTissueCharacterizationFilter.h  itkTissueCharacterizationFilter.hxx  itkUSMixtureModelComponentBase.h  itkUSMixtureModelComponentBase.hxx
src/: CMakeLists.txt  ImageCompare.cxx  MixtureModel.cxx  README.txt
src/lib/: itkExpectationMaximizationMixtureModelEstimator.h  itkExpectationMaximizationMixtureModelEstimator.hxx  itkGammaInitHelper.hxx  itkGammaMLEFunction.h  itkGammaMembershipFunction.h  itkGammaMixtureModelComponent.h  itkGammaMixtureModelComponent.hxx  itkGaussianInitHelper.hxx  itkGaussianMixtureModelComponent.h  itkGeneralizedGammaExpectationMaximizationMixtureModelEstimator.h  itkGeneralizedGammaExpectationMaximizationMixtureModelEstimator.hxx  itkGeneralizedGammaInitHelper.hxx  itkGeneralizedGammaMLEFunction.h  itkGeneralizedGammaMembershipFunction.h  itkGeneralizedGammaMembershipFunction.hxx  itkGeneralizedGammaMixtureModelComponent.h  itkGeneralizedGammaMixtureModelComponent.hxx  itkLikelihoodMapImageFilter.hxx  itkMixtureModelComponentBase.h  itkMixtureModelInitHelper.h  itkMixtureModelMembershipFunctionBase.h  itkRayleighInitHelper.hxx  itkRayleighMembershipFunction.h  itkRayleighMembershipFunction.hxx  itkRayleighMixtureModelComponent.h  itkRayleighMixtureModelComponent.hxx  itkTissueCharacterizationFilter.h  itkTissueCharacterizationFilter.hxx
test/: CMakeLists.txt  MixtureModel.cxx
wrapping/: CMakeLists.txt
